# multi-threading

./: .gitignore  CMakeLists.txt  build_run.sh  run_teach_cluster.sh  vec_mul_driver.cpp
include/: vec_mul.h
src/: vec_mul.cpp
